tekton/results-v0.5.0.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: 9f84a1f
  name: tekton-results-api-service
  namespace: tekton-pipelines
spec:
  ports:
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: 50051
    - name: rest
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: prometheus
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/name: tekton-results-api
    app.kubernetes.io/version: 9f84a1f
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tekton-results-postgres
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: 9f84a1f
  name: tekton-results-postgres-service
  namespace: tekton-pipelines
spec:
  ports:
    - name: postgres
      port: 5432
  selector:
    app.kubernetes.io/name: tekton-results-postgres
    app.kubernetes.io/version: 9f84a1f
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: 9f84a1f
  name: tekton-results-watcher
  namespace: tekton-pipelines
spec:
  ports:
    - name: metrics
      port: 9090
    - name: profiling
      port: 8008
  selector:
    app.kubernetes.io/name: tekton-results-watcher
    app.kubernetes.io/version: 9f84a1f
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: tekton-results-api
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: 9f84a1f
  name: tekton-results-api
  namespace: tekton-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tekton-results-api
      app.kubernetes.io/version: 9f84a1f
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/name: tekton-results-api
        app.kubernetes.io/version: 9f84a1f
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: tekton-results-postgres-service.tekton-pipelines.svc.cluster.local
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_USER
                  name: tekton-results-postgres
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: POSTGRES_PASSWORD
                  name: tekton-results-postgres
            - name: DB_NAME
              value: tekton-results
          image: gcr.io/tekton-releases/github.com/tektoncd/results/cmd/api:9f84a1f@sha256:606816e51ebecb58fccc28f5a95699255ed8742470df673294ce25f69ffc451c
          name: api
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/tekton/results
              name: config
              readOnly: true
            - mountPath: /etc/tls
              name: tls
              readOnly: true
      serviceAccountName: tekton-results-api
      volumes:
        - configMap:
            name: tekton-results-api-config
          name: config
        - name: tls
          secret:
            secretName: tekton-results-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: tekton-results-watcher
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: 9f84a1f
  name: tekton-results-watcher
  namespace: tekton-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tekton-results-watcher
      app.kubernetes.io/version: 9f84a1f
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app.kubernetes.io/name: tekton-results-watcher
        app.kubernetes.io/version: 9f84a1f
    spec:
      containers:
        - args:
            - -api_addr
            - tekton-results-api-service.tekton-pipelines.svc.cluster.local:50051
            - -auth_mode
            - token
          image: gcr.io/tekton-releases/github.com/tektoncd/results/cmd/watcher:9f84a1f@sha256:ef366217e859b9194d1ca4f3b6c2d9aa26cdbfcaed7e9d81b87fe7f605fd9bf5
          name: watcher
          ports:
            - containerPort: 9090
              name: metrics
            - containerPort: 8008
              name: profiling
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/tls
              name: tls
              readOnly: true
      serviceAccountName: tekton-results-watcher
      volumes:
        - name: tls
          secret:
            secretName: tekton-results-tls
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: tekton-results-postgres
    app.kubernetes.io/part-of: tekton-results
    app.kubernetes.io/version: 9f84a1f
  name: tekton-results-postgres
  namespace: tekton-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tekton-results-postgres
      app.kubernetes.io/version: 9f84a1f
  serviceName: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tekton-results-postgres
        app.kubernetes.io/version: 9f84a1f
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: tekton-results-postgres
            - secretRef:
                name: tekton-results-postgres
          image: bitnami/postgresql@sha256:23b9a21460fefdd83accd0f864e734c88bebc67c86ee752a97b77dd4843907f0
          name: postgres
          ports:
            - containerPort: 5432
              name: postgredb
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: postgredb
  volumeClaimTemplates:
    - metadata:
        labels:
          app.kubernetes.io/version: 9f84a1f
        name: postgredb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
